welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
    reprodCouleur(Tableau)
                  ^Array1:30: warning: enclosing method chopperCouleur has result type Unit: return value discarded
 return T
 ^